refactor(basic-3.4) add class to the tag, delete tag selectors from css

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.eisenhower-matrix {
   width: 100%;
 }
 .header .more-inf {
@@ -35,12 +35,12 @@ body {
 .task-wrapper {
   display: flex;
 }
-ul {
+.list {
   margin: 0;
   padding: 0px;
 }
-li,
-h3 {
+.item,
+.title {
   list-style: none;
 }
 input,
@@ -60,7 +60,7 @@ button:hover {
   color: #3a3A3a;
 }
 /* Heading */
-h3,
+.title,
 label[for='new-task'] {
   color: #333;
   font-weight: 700;
@@ -96,7 +96,7 @@ input#new-task {
 }
 
 /* Task list */
-li {
+.item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -104,20 +104,20 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.item > input[type="checkbox"] {
   margin: 0 10px;
 }
-li > label {
+.item > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.item >    input[type="text"] {
   width: 226px;
 }
 button.delete img {
@@ -130,21 +130,21 @@ button.delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+.list#completed-tasks label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list .item input[type=text] {
   display: none;
 }
 
-ul li.edit-mode input[type=text] {
+.list .edit-mode input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.edit-mode label {
+.list .edit-mode label {
   display: none;
 }
